# ros2_learn

chapt5_ws/src/demo_python_tf/: package.xml  setup.py
chapt5_ws/src/demo_python_tf/demo_python_tf/: static_tf_broadcast.py
fishroslearn_ws/: novel1.txt  novel2.txt  novel3.txt
fishroslearn_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
fishroslearn_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
fishroslearn_ws/src/demo_python_topic/: package.xml  setup.py
fishroslearn_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
fishroslearn_ws/src/learning_pkg_cpp/: CMakeLists.txt  package.xml
fishroslearn_ws/src/learning_pkg_cpp/src/: learn_functional.cpp  learn_thread.cpp  node_cpp.cpp
fishroslearn_ws/src/learning_pkg_python/: package.xml  setup.py
fishroslearn_ws/src/learning_pkg_python/learning_pkg_python/: learn_thread.py  python_node.py
service_cpp_ws/src/chapt4_interface/: CMakeLists.txt  package.xml
service_cpp_ws/src/chapt4_interface/srv/: Patrol.srv
service_cpp_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
service_cpp_ws/src/demo_cpp_service/launch/: demo.launch.py
service_cpp_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
service_practice_ws/src/chapt4_interface/: CMakeLists.txt  package.xml
service_practice_ws/src/chapt4_interface/srv/: FaceDetector.srv
service_practice_ws/src/demo_python_service/: package.xml  setup.py
topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
topic_practice_ws/src/status_publisher/: package.xml  setup.py
topic_practice_ws/src/status_subscriber/: CMakeLists.txt  package.xml
(+6 files in other folders)
